--- a/app/src/main/res/layout/activity_menu_adoptante.xml
+++ b/app/src/main/res/layout/activity_menu_adoptante.xml
@@ -71,7 +71,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars[2]" />
+                    app:srcCompat="@drawable/icono_animales" />
 
                 <TextView
                     android:id="@+id/textViewBuscarAnimales"
@@ -99,11 +99,11 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:contentDescription="@string/descripcionImagenBuscarInstituciones"
-                    tools:srcCompat="@tools:sample/avatars[2]"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/icono_institucion" />
 
                 <TextView
                     android:id="@+id/textViewBuscarInstituciones"
@@ -165,7 +165,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars[2]" />
+                    app:srcCompat="@drawable/icono_historias_felices" />
 
                 <TextView
                     android:id="@+id/textViewVerHistoriasFelices"
