--- a/app/src/main/res/layout/activity_menu_keeper.xml
+++ b/app/src/main/res/layout/activity_menu_keeper.xml
@@ -11,7 +11,7 @@
     android:paddingEnd="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="10dp"
-    tools:context=".ActivityMenuAdoptante">
+    tools:context=".ActivityMenuKeeper">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -20,51 +20,51 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/ConstraintLayoutReporteRapido"
+                android:id="@+id/ConstraintLayoutRegistrarAnimal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary">
 
                 <ImageView
-                    android:id="@+id/imageViewReporteRapido"
+                    android:id="@+id/imageViewRegistrarAnimal"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:contentDescription="@string/botonReporteRapido"
+                    android:contentDescription="@string/botonRegistrarAnimal"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars[2]" />
+                    app:srcCompat="@drawable/icono_item_animal" />
 
                 <TextView
-                    android:id="@+id/textViewReporteRapido"
+                    android:id="@+id/textViewRegistrarAnimal"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:text="@string/botonRegistrarAnimal"
                     android:gravity="center"
-                    android:text="@string/botonReporteRapido"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageViewReporteRapido"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toEndOf="@+id/imageViewRegistrarAnimal"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/ConstraintLayoutBuscarAnimales"
+                android:id="@+id/ConstraintLayoutVerMisAnimales"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:background="@color/colorPrimary">
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:layout_marginTop="10dp">
 
                 <ImageView
-                    android:id="@+id/imageViewBuscarAnimales"
+                    android:id="@+id/imageViewVerMisAnimales"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:contentDescription="@string/botonBuscarAnimales"
+                    android:contentDescription="@string/botonVerMisAnimales"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -72,122 +72,124 @@
                     app:srcCompat="@drawable/icono_animales" />
 
                 <TextView
-                    android:id="@+id/textViewBuscarAnimales"
-                    android:text="@string/botonBuscarAnimales"
+                    android:id="@+id/textViewVerMisAnimales"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:text="@string/botonVerMisAnimales"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageViewBuscarAnimales"
+                    app:layout_constraintStart_toEndOf="@+id/imageViewVerMisAnimales"
                     app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/ConstraintLayoutBuscarInstituciones"
+                android:id="@+id/ConstraintLayoutVerPeticiones"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:background="@color/colorPrimary">
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:layout_marginTop="10dp">
 
                 <ImageView
-                    android:id="@+id/imageViewBuscarInstituciones"
+                    android:id="@+id/imageViewVerPeticiones"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:contentDescription="@string/botonVerPeticiones"
+                    tools:src="@tools:sample/avatars[2]"
+                    android:scaleType="fitCenter"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <TextView
+                    android:id="@+id/textViewVerPeticiones"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/botonVerPeticiones"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageViewVerPeticiones"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ConstraintLayoutEventos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:id="@+id/imageViewEventos"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:contentDescription="@string/botonEventos"
+                    tools:src="@tools:sample/avatars[2]"
+                    android:scaleType="fitCenter"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <TextView
+                    android:id="@+id/textViewEventos"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/botonEventos"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/imageViewEventos"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ConstraintLayoutBuscarOtrasInstituciones"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:id="@+id/imageViewBuscarOtrasInstituciones"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:contentDescription="@string/botonBuscarInstituciones"
+                    tools:src="@tools:sample/avatars[2]"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/icono_institucion" />
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <TextView
-                    android:id="@+id/textViewBuscarInstituciones"
+                    android:id="@+id/textViewBuscarOtrasInstituciones"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:text="@string/botonBuscarInstituciones"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageViewBuscarInstituciones"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/ConstraintLayoutVerEventos"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:background="@color/colorPrimary">
-
-                <ImageView
-                    android:id="@+id/imageViewVerEventos"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:contentDescription="@string/botonVerEventos"
-                    android:scaleType="fitCenter"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars[2]" />
-
-                <TextView
-                    android:id="@+id/textViewVerEventos"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/botonVerEventos"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageViewVerEventos"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/ConstraintLayoutVerHistoriasFelices"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:background="@color/colorPrimary">
-
-                <ImageView
-                    android:id="@+id/imageViewVerHistoriasFelices"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:contentDescription="@string/botonVerHistoriasFelices"
-                    android:scaleType="fitCenter"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/icono_historias_felices" />
-
-                <TextView
-                    android:id="@+id/textViewVerHistoriasFelices"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/botonVerHistoriasFelices"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageViewVerHistoriasFelices"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toEndOf="@+id/imageViewBuscarOtrasInstituciones"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/ConstraintLayoutEditarPerfil"
+                android:id="@+id/ConstraintLayoutEditarPerfilKeeper"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:background="@color/colorPrimary">
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:layout_marginTop="10dp">
 
                 <ImageView
-                    android:id="@+id/imageViewEditarPerfil"
+                    android:id="@+id/imageViewEditarPerfilKeeper"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:contentDescription="@string/botonEditarPerfil"
@@ -195,10 +197,10 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars[2]" />
+                    tools:src="@tools:sample/avatars[2]" />
 
                 <TextView
-                    android:id="@+id/textViewEditarPerfil"
+                    android:id="@+id/textViewEditarPerfilKeeper"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -206,20 +208,19 @@
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageViewEditarPerfil"
+                    app:layout_constraintStart_toEndOf="@+id/imageViewEditarPerfilKeeper"
                     app:layout_constraintTop_toTopOf="parent" />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/ConstraintLayoutCerrarSesion"
+                android:id="@+id/ConstraintLayoutCerrarSesionKeeper"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:background="@color/colorPrimary">
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:layout_marginTop="10dp">
 
                 <ImageView
-                    android:id="@+id/imageViewCerrarSesion"
+                    android:id="@+id/imageViewCerrarSesionKeeper"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:contentDescription="@string/botonCerrarSesion"
@@ -227,10 +228,10 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars[2]" />
+                    tools:src="@tools:sample/avatars[2]" />
 
                 <TextView
-                    android:id="@+id/textViewCerrarSesion"
+                    android:id="@+id/textViewCerrarSesionKeeper"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -238,11 +239,10 @@
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imageViewCerrarSesion"
+                    app:layout_constraintStart_toEndOf="@+id/imageViewCerrarSesionKeeper"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
     </ScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
