--- a/app/src/main/res/layout/layout_item_animal.xml
+++ b/app/src/main/res/layout/layout_item_animal.xml
@@ -6,7 +6,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="210dp"
         android:padding="10dp"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
@@ -19,12 +19,12 @@
             android:id="@+id/imageViewItemAnimal"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_marginStart="5dp"
             android:contentDescription="@string/descripcionImagenAnimal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/icono_item_animal"
-            android:layout_marginStart="20dp"/>
+            app:srcCompat="@drawable/icono_item_animal" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
