--- a/app/src/main/res/layout/layout_item_animal.xml
+++ b/app/src/main/res/layout/layout_item_animal.xml
@@ -6,8 +6,28 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/ConstraintLayoutNombreItem"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textViewItemNombreAnimal"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/nombreAnimal"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_marginStart="7.5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/ConstraintLayoutDetallesItem"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
         android:padding="10dp"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
@@ -16,19 +36,6 @@
         android:paddingRight="10dp"
         android:paddingBottom="10dp">
 
-        <TextView
-            android:id="@+id/textViewItemNombreAnimal"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/nombreAnimal"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/imageViewItemAnimal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <ImageView
             android:id="@+id/imageViewItemAnimal"
             android:layout_width="100dp"
@@ -36,33 +43,24 @@
             android:contentDescription="@string/descripcionImagenAnimal"
             android:maxWidth="100dp"
             android:maxHeight="100dp"
-            android:scaleType="fitCenter"
+            android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/textViewItemDetallesAnimal"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/icono_item_animal" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/textViewItemDetallesAnimal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="@string/detallesAnimal"
+            android:textSize="12sp"
             android:layout_marginStart="10dp"
-            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/imageViewItemAnimal"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/textViewItemDetallesAnimal"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/detallesAnimal"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintLeft_toRightOf="@id/imageViewItemAnimal"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
