--- a/app/src/main/res/layout/activity_buscar_animales.xml
+++ b/app/src/main/res/layout/activity_buscar_animales.xml
@@ -54,18 +54,16 @@
         android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/listViewAnimales"
-        app:layout_constraintTop_toBottomOf="@id/ConstraintLayoutFiltro"/>
+        app:layout_constraintTop_toBottomOf="@id/ConstraintLayoutFiltro"
+        app:layout_constraintBottom_toTopOf="@id/RecyclerViewAnimales"/>
 
-    <ListView
-        android:id="@+id/listViewAnimales"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerViewAnimales"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/progressBarListaAnimales">
-
-    </ListView>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/progressBarListaAnimales" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
