--- a/app/src/main/res/layout/layout_item_animal.xml
+++ b/app/src/main/res/layout/layout_item_animal.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ConstraintLayoutNombreItem"
@@ -14,10 +15,10 @@
             android:id="@+id/textViewItemNombreAnimal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="7.5dp"
             android:text="@string/nombreAnimal"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:layout_marginStart="7.5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -54,13 +55,13 @@
             android:id="@+id/textViewItemDetallesAnimal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:text="@string/detallesAnimal"
             android:textSize="12sp"
-            android:layout_marginStart="10dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/imageViewItemAnimal"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/imageViewItemAnimal"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
