--- a/app/src/main/res/layout/activity_inicio_persona.xml
+++ b/app/src/main/res/layout/activity_inicio_persona.xml
@@ -27,8 +27,10 @@
             android:id="@+id/imageViewAdoptante"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_margin="5dp"
             android:contentDescription="@string/descripcionImagenAdoptante"
             android:scaleType="fitCenter"
+            android:tint="@color/common_google_signin_btn_text_dark_default"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -41,10 +43,11 @@
             android:gravity="center"
             android:text="@string/entrarComoAdoptante"
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imageViewAdoptante"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imageViewAdoptante"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -63,8 +66,10 @@
             android:id="@+id/imageViewHogarPaso"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_margin="5dp"
             android:contentDescription="@string/descripcionImagenHogarPaso"
             android:scaleType="fitCenter"
+            android:tint="@color/common_google_signin_btn_text_dark_default"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -77,10 +82,11 @@
             android:gravity="center"
             android:text="@string/entrarComoHogarPaso"
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imageViewHogarPaso"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imageViewHogarPaso"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
