--- a/app/src/main/res/layout/activity_menu_adoptante.xml
+++ b/app/src/main/res/layout/activity_menu_adoptante.xml
@@ -32,12 +32,14 @@
                     android:id="@+id/imageViewReporteRapido"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:background="@color/common_google_signin_btn_text_dark_default"
                     android:contentDescription="@string/botonReporteRapido"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars[2]" />
+                    tools:srcCompat="@tools:sample/avatars[2]"
+                    android:layout_margin="5dp"/>
 
                 <TextView
                     android:id="@+id/textViewReporteRapido"
@@ -45,6 +47,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/botonReporteRapido"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -64,8 +67,10 @@
                     android:id="@+id/imageViewBuscarAnimales"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:layout_margin="5dp"
                     android:contentDescription="@string/botonBuscarAnimales"
                     android:scaleType="fitCenter"
+                    android:tint="@color/common_google_signin_btn_text_dark_default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -73,10 +78,11 @@
 
                 <TextView
                     android:id="@+id/textViewBuscarAnimales"
-                    android:text="@string/botonBuscarAnimales"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:text="@string/botonBuscarAnimales"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -96,8 +102,10 @@
                     android:id="@+id/imageViewBuscarInstituciones"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:layout_margin="5dp"
                     android:contentDescription="@string/botonBuscarInstituciones"
                     android:scaleType="fitCenter"
+                    android:tint="@color/common_google_signin_btn_text_dark_default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -105,10 +113,11 @@
 
                 <TextView
                     android:id="@+id/textViewBuscarInstituciones"
-                    android:text="@string/botonBuscarInstituciones"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:text="@string/botonBuscarInstituciones"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -127,12 +136,14 @@
                     android:id="@+id/imageViewVerEventos"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:background="@color/common_google_signin_btn_text_dark_default"
                     android:contentDescription="@string/botonVerEventos"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars[2]" />
+                    tools:srcCompat="@tools:sample/avatars[2]"
+                    android:layout_margin="5dp"/>
 
                 <TextView
                     android:id="@+id/textViewVerEventos"
@@ -140,6 +151,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/botonVerEventos"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -158,8 +170,10 @@
                     android:id="@+id/imageViewVerHistoriasFelices"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:layout_margin="5dp"
                     android:contentDescription="@string/botonVerHistoriasFelices"
                     android:scaleType="fitCenter"
+                    android:tint="@color/common_google_signin_btn_text_dark_default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -171,6 +185,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/botonVerHistoriasFelices"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -190,12 +205,14 @@
                     android:id="@+id/imageViewEditarPerfil"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:background="@color/common_google_signin_btn_text_dark_default"
                     android:contentDescription="@string/botonEditarPerfil"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars[2]" />
+                    tools:srcCompat="@tools:sample/avatars[2]"
+                    android:layout_margin="5dp"/>
 
                 <TextView
                     android:id="@+id/textViewEditarPerfil"
@@ -203,6 +220,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/botonEditarPerfil"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -222,12 +240,14 @@
                     android:id="@+id/imageViewCerrarSesion"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:background="@color/common_google_signin_btn_text_dark_default"
                     android:contentDescription="@string/botonCerrarSesion"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars[2]" />
+                    tools:srcCompat="@tools:sample/avatars[2]"
+                    android:layout_margin="5dp"/>
 
                 <TextView
                     android:id="@+id/textViewCerrarSesion"
@@ -235,6 +255,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/botonCerrarSesion"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
