--- a/app/src/main/res/layout/activity_menu_keeper.xml
+++ b/app/src/main/res/layout/activity_menu_keeper.xml
@@ -32,8 +32,10 @@
                     android:id="@+id/imageViewRegistrarAnimal"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:layout_margin="5dp"
                     android:contentDescription="@string/botonRegistrarAnimal"
                     android:scaleType="fitCenter"
+                    android:tint="@color/common_google_signin_btn_text_dark_default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -43,13 +45,14 @@
                     android:id="@+id/textViewRegistrarAnimal"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/botonRegistrarAnimal"
                     android:gravity="center"
+                    android:text="@string/botonRegistrarAnimal"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageViewRegistrarAnimal"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -64,8 +67,10 @@
                     android:id="@+id/imageViewVerMisAnimales"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:layout_margin="5dp"
                     android:contentDescription="@string/botonVerMisAnimales"
                     android:scaleType="fitCenter"
+                    android:tint="@color/common_google_signin_btn_text_dark_default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -77,6 +82,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/botonVerMisAnimales"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -96,24 +102,27 @@
                     android:id="@+id/imageViewVerPeticiones"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:background="@color/common_google_signin_btn_text_dark_default"
                     android:contentDescription="@string/botonVerPeticiones"
-                    tools:src="@tools:sample/avatars[2]"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@tools:sample/avatars[2]"
+                    android:layout_margin="5dp"/>
 
                 <TextView
                     android:id="@+id/textViewVerPeticiones"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/botonVerPeticiones"
                     android:gravity="center"
+                    android:text="@string/botonVerPeticiones"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageViewVerPeticiones"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -128,24 +137,27 @@
                     android:id="@+id/imageViewEventos"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:background="@color/common_google_signin_btn_text_dark_default"
                     android:contentDescription="@string/botonEventos"
-                    tools:src="@tools:sample/avatars[2]"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@tools:sample/avatars[2]"
+                    android:layout_margin="5dp"/>
 
                 <TextView
                     android:id="@+id/textViewEventos"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/botonEventos"
                     android:gravity="center"
+                    android:text="@string/botonEventos"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageViewEventos"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -160,24 +172,27 @@
                     android:id="@+id/imageViewBuscarOtrasInstituciones"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:background="@color/common_google_signin_btn_text_dark_default"
                     android:contentDescription="@string/botonBuscarInstituciones"
-                    tools:src="@tools:sample/avatars[2]"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@tools:sample/avatars[2]"
+                    android:layout_margin="5dp"/>
 
                 <TextView
                     android:id="@+id/textViewBuscarOtrasInstituciones"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/botonBuscarInstituciones"
                     android:gravity="center"
+                    android:text="@string/botonBuscarInstituciones"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageViewBuscarOtrasInstituciones"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -192,12 +207,14 @@
                     android:id="@+id/imageViewEditarPerfilKeeper"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:background="@color/common_google_signin_btn_text_dark_default"
                     android:contentDescription="@string/botonEditarPerfil"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:src="@tools:sample/avatars[2]" />
+                    tools:src="@tools:sample/avatars[2]"
+                    android:layout_margin="5dp"/>
 
                 <TextView
                     android:id="@+id/textViewEditarPerfilKeeper"
@@ -205,6 +222,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/botonEditarPerfil"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -223,12 +241,14 @@
                     android:id="@+id/imageViewCerrarSesionKeeper"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
+                    android:background="@color/common_google_signin_btn_text_dark_default"
                     android:contentDescription="@string/botonCerrarSesion"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:src="@tools:sample/avatars[2]" />
+                    tools:src="@tools:sample/avatars[2]"
+                    android:layout_margin="5dp"/>
 
                 <TextView
                     android:id="@+id/textViewCerrarSesionKeeper"
@@ -236,6 +256,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/botonCerrarSesion"
+                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
