--- a/app/src/main/res/layout/layout_item_animal.xml
+++ b/app/src/main/res/layout/layout_item_animal.xml
@@ -15,7 +15,7 @@
             android:id="@+id/textViewItemNombreAnimal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="7.5dp"
+            android:background="@color/tituloPerfil"
             android:text="@string/nombreAnimal"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -29,6 +29,7 @@
         android:id="@+id/ConstraintLayoutDetallesItem"
         android:layout_width="match_parent"
         android:layout_height="120dp"
+        android:background="@color/datosPerfil"
         android:padding="10dp"
         android:paddingStart="10dp"
         android:paddingLeft="10dp"
