--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#B0002D57</color>
     <color name="colorAccent">#FAF0F1F3</color>
     <color name="tituloPerfil">#396998F8</color>
+    <color name="datosPerfil">#31D5DEEF</color>
 </resources>
